fix: admin page button alignment

--- a/src/app/pages/admin-page/admin-page.component.scss
+++ b/src/app/pages/admin-page/admin-page.component.scss
@@ -25,4 +25,9 @@ mat-card {
     font-weight: normal;
     font-size: x-large;
   }
+  mat-card-actions.mat-card-actions{
+    .mat-stroked-button{
+      margin: 0;
+    }
+  }
 }
